--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,8 @@
     "react-hooks/rules-of-hooks": "off",
     "no-unused-expressions": "off",
     "max-len": "off",
-    "import/no-cycle": "off"
+    "import/no-cycle": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   },
   "overrides": [
     {
